--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "dev": "concurrently \"npm run next-dev\" \"npm run json-server\" \"npm run socket-server\"",
     "next-dev": "next dev",
-    "json-server": "json-server --watch db.json --port 3002",
-    "socket-server": "node server.js",
+    "json-server": "json-server --watch src/db.json --port 3002 --no-cors",
+    "socket-server": "node src/server.js",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -33,7 +33,8 @@
     "ws": "^8.18.0"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/json-server": "^0.14.7",
+    "@types/node": "^20.17.8",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-flatpickr": "^3.8.11",
@@ -44,6 +45,7 @@
     "prettier": "3.3.3",
     "react-flatpickr": "^3.10.13",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.2"
   }
 }
