--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-flatpickr": "^3.8.11",
+    "classnames": "^2.5.1",
     "concurrently": "^9.1.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
